--- a/app/online.html
+++ b/app/online.html
@@ -18,6 +18,182 @@
   </head>
   <body>
     <div class="full">
+      <div class="online__mobile-wrapper">
+        <nav class="online__mmenu-navigation">
+          <ul class="online__mmenu">
+            <li class="online__mmenu-item">
+              <a href="#">Новинки</a>
+            </li>
+            <li class="online__mmenu-item online__has-child">
+              <a href="#">Фильмы</a>
+              <div class="online__mmenu-wrap online__mmenu-list">
+                <ul class="online__mmenu-sub-list">
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Артхаус</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Биография</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Военные и политические</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Детективы</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Документальные</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Драмы</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Исторические</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Комедии</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Короткометражные</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Криминал</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Мелодрамы</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Приключения</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Семейные / Детские</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Спорт</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Триллеры</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Ужасы / Мистика</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Фантастика</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Фэнтези</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Эротика</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="online__mmenu-item online__has-child">
+              <a href="#">Сериалы</a>
+              <div class="online__mmenu-wrap online__mmenu-list">
+                <ul class="online__mmenu-sub-list">
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Боевики</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Военные</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Дорамы</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Детективы</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Драмы</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Исторические</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Комедии</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Мелодрамы</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Криминал</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Триллеры</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="online__mmenu-item online__has-child">
+              <a href="#">Мультфильмы</a>
+              <div class="online__mmenu-wrap online__mmenu-list">
+                <ul class="online__mmenu-sub-list">
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Аниме</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Для детей</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Русские</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Советские</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Зарубежные</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="online__mmenu-item online__has-child">
+              <a href="#">Азия</a>
+              <div class="online__mmenu-wrap online__mmenu-list">
+                <ul class="online__mmenu-sub-list">
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Аниме</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Дорамы</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="online__mmenu-item online__has-child">
+              <a href="#">Русское кино</a>
+              <div class="online__mmenu-wrap online__mmenu-list">
+                <ul class="online__mmenu-sub-list">
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">2000-2020 годы</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">90-е годы</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">80-е годы</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">60-е годы</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Российское</a>
+                  </li>
+                  <li class="online__mmenu-sub-item online__mmenu-item">
+                    <a href="#" class="online__mmenu-sub-link">Советское</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="online__mmenu-item">
+              <a href="#">Подборки</a>
+            </li>
+            <li class="online__mmenu-item">
+              <a href="#">Блог</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
       <header class="page-header page-header--inner cinema-header">
         <div class="page-header__inner">
           <div class="page-header__item">
@@ -206,6 +382,9 @@
                         <a href="#" class="header__menu-sub-link">Военные</a>
                       </li>
                       <li class="header__menu-sub-item menu-item">
+                        <a href="#" class="header__menu-sub-link">Дорамы</a>
+                      </li>
+                      <li class="header__menu-sub-item menu-item">
                         <a href="#" class="header__menu-sub-link">Детективы</a>
                       </li>
                       <li class="header__menu-sub-item menu-item">
@@ -233,6 +412,9 @@
                   <a href="#" class="header__menu-link animate-link">Мультфильмы</a>
                   <div class="header__menu-wrap menu-list">
                     <ul class="header__menu-sub-list">
+                      <li class="header__menu-sub-item menu-item">
+                        <a href="#" class="header__menu-sub-link">Аниме</a>
+                      </li>
                       <li class="header__menu-sub-item menu-item">
                         <a href="#" class="header__menu-sub-link">Для детей</a>
                       </li>
